# compiler

./: .gitignore  CMakeLists.txt  README.md  main.c
examples/: test.c  test.tla
include/frontend/: lexer.h
src/frontend/: lexer.c
